Mon Jul 14 12:55:13 2003  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/tests/Notify/Lanes/run_test.pl:
	* orbsvcs/tests/Notify/ThreadPool/run_test.pl:

	  Use <Kill> instead of <Wait> to stop the "Still Running on
	  exit.." error by perl. 

	* orbsvcs/tests/Notify/RT_lib/RT_POA_Command.cpp:	
	* orbsvcs/tests/Notify/lib/Options_Parser.cpp:
	* orbsvcs/tests/Notify/*.conf:
	
	  Changed inconsistent use of "ThreadPoolLanes" string to the
	  easily readable "Lanes".
	  
	* orbsvcs/tests/Notify/lib/Driver.cpp:
 	* orbsvcs/tests/Notify/lib/Driver.h:
	* orbsvcs/tests/Notify/performance-tests/scripts/Max_Throughput/Colocated/run_test.pl:
	* orbsvcs/tests/Notify/performance-tests/scripts/Max_Throughput/2_Hops/run_test.pl:
	* orbsvcs/tests/Notify/performance-tests/scripts/Max_Throughput/3_Hops/run_test.pl:
	* orbsvcs/tests/Notify/performance-tests/scripts/Max_Throughput/Notify/run_test.pl:

	  Added the "-Skip_Priority_Levels_Check" option. We need some
	  Notify tests to run regardless of the available priority levels.
	
Mon Jul 14 11:12:25 2003  Pradeep Gore  <pradeep@oomworks.com>

	* tests/RTCORBA/Priority_Inversion_With_Bands/client.cpp:
	* tests/RTCORBA/Priority_Inversion_With_Bands/test_i.cpp:

	  Fixed incorrect ACE_TRY usage.
	
	* tests/RTCORBA/Priority_Inversion_With_Bands/README:

          Fixed minor typo in README and in ChangeLog dated Sat Jul 12 14:01:47 2003  
	
Sat Jul 12 18:43:31 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tests/RTCORBA/Priority_Inversion_With_Bands/client.cpp (svc): 

	  Improved output format.

Sat Jul 12 18:27:10 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tests/RTCORBA/Priority_Inversion_With_Bands/client.cpp: 

	  Thread priority should be determined after the real-time thread
	  has been spawned.

Sat Jul 12 17:43:36 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tao/RTCORBA/RT_Transport_Descriptor.cpp: 

 	  Zero time value should be specified as ACE_Time_Value::zero and
	  not 0.
	