@@ -1,3 +1,8 @@
+Mon Jul 14 14:21:46 2003  Pradeep Gore  <pradeep@oomworks.com>
+
+	* docs/releasenotes/notify.html:
+	  Updated.
+
 Mon Jul 14 12:55:13 2003  Pradeep Gore  <pradeep@oomworks.com>
 
 	* orbsvcs/tests/Notify/Lanes/run_test.pl:
